--- a/index.html
+++ b/index.html
@@ -11,23 +11,41 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="node_modules/angular-material/angular-material.min.css">
+    <link rel="stylesheet" href="node_modules/angular-loading-bar/build/loading-bar.min.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/icons/icons-style.css">
     <link rel="shortcut icon" href="icons/favicon.png">
 </head>
 <body>
+    <div class="header md-whiteframe-3dp">
+        <a href="#!/">
+            <img src="images/logo.png" height="60" class="logo">
+        </a>
+        <div class="header-buttons">
+            <div layout="row">
+                <md-button class="md-fab md-primary md-mini" ng-href="#!/" ng-show="showBack">
+                    <md-icon md-font-library="material-icons">arrow_back</md-icon>
+                </md-button>
+            </div>
+        </div>
+    </div>
     <div ng-view></div>
 
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <!--<script src="node_modules/jquery/dist/jquery.js"></script>-->
+    <script src="js/jquery-latest.min.js"></script>
     <script src="node_modules/angular/angular.min.js"></script>
     <script src="node_modules/angular-material/angular-material.min.js"></script>
     <script src="node_modules/angular-animate/angular-animate.min.js"></script>
     <script src="node_modules/angular-aria/angular-aria.min.js"></script>
     <script src="node_modules/angular-route/angular-route.min.js"></script>
     <script src="node_modules/angular-messages/angular-messages.min.js"></script>
+    <script src="node_modules/angular-loading-bar/build/loading-bar.min.js"></script>
+    <script src="js/threesixty.min.js"></script>
 
     <script src="app.js"></script>
     <script src="pages/images-list/images-list-controller.js"></script>
     <script src="pages/image-preview/image-preview-controller.js"></script>
+    <script src="services/dialog-service.js"></script>
+    <script src="directives/image-viewer/image-viewer.js"></script>
 </body>
 </html>
