--- a/pages/images-list/images-list.html
+++ b/pages/images-list/images-list.html
@@ -1,1 +1,15 @@
-<p>This is list of items</p>
+<div>
+    <md-content>
+        <md-list flex ng-if="images && images.length > 0">
+            <md-list-item class="md-3-line" ng-repeat="image in images" href="#!/image/{{image._id}}">
+                <div layout="row">
+                    <img class="list-item-thumbnail" src="{{image.thumbnail}}">
+                </div>
+                <div class="md-secondary">
+                    <p style="margin-left: 15px">{{image.createdAt | date: "yyyy-MM-dd HH:mm:ss"}}</p>
+                </div>
+                <md-divider></md-divider>
+            </md-list-item>
+        </md-list>
+    </md-content>
+</div>
