Fixed and applied loader dialog. Changed images list view to grid layout

--- a/pages/dialogs/loader.html
+++ b/pages/dialogs/loader.html
@@ -1,4 +1,4 @@
-<md-dialog class="fullscreen-dialog">
+<md-dialog class="loader-dialog">
     <md-dialog-content>
         <div class="md-dialog-content" layout="row">
             <md-progress-circular md-mode="indeterminate"></md-progress-circular>
