--- a/pages/images-list/images-list.html
+++ b/pages/images-list/images-list.html
@@ -1,15 +1,13 @@
 <div>
-    <md-content>
-        <md-list flex ng-if="images && images.length > 0">
-            <md-list-item class="md-3-line" ng-repeat="image in images" href="#!/image/{{image._id}}">
-                <div layout="row">
+    <md-content layout-padding>
+        <md-grid-list md-cols="3" md-gutter="100px" md-row-height-gt-md="1:1" md-row-height="4:3">
+            <md-grid-tile ng-repeat="image in images">
+                <a href="#!/image/{{image._id}}"
+                   style="min-width: 100%; max-width: 100%; width: 100%; min-height: 100%; max-height: 100%; height: 100%;">
                     <img class="list-item-thumbnail" src="{{image.thumbnail}}">
-                </div>
-                <div class="md-secondary">
-                    <p style="margin-left: 15px">{{image.createdAt | date: "yyyy-MM-dd HH:mm:ss"}}</p>
-                </div>
-                <md-divider></md-divider>
-            </md-list-item>
-        </md-list>
+                    <md-grid-tile-footer layout-align="center center"><h3>{{image.createdAt | date: "yyyy-MM-dd HH:mm:ss"}}</h3></md-grid-tile-footer>
+                </a>
+            </md-grid-tile>
+        </md-grid-list>
     </md-content>
 </div>
