--- a/pages/images-list/images-list.html
+++ b/pages/images-list/images-list.html
@@ -5,8 +5,16 @@
                 <a href="#!/image/{{image._id}}"
                    style="min-width: 100%; max-width: 100%; width: 100%; min-height: 100%; max-height: 100%; height: 100%;">
                     <img class="list-item-thumbnail" src="{{image.thumbnail}}">
-                    <md-grid-tile-footer layout-align="center center"><h3>{{image.createdAt | date: "yyyy-MM-dd HH:mm:ss"}}</h3></md-grid-tile-footer>
                 </a>
+                    <md-grid-tile-footer>
+                        <div layout="row" layout-padding layout-align="center center">
+                            <h3 flex>{{image.createdAt | date: "yyyy-MM-dd HH:mm:ss"}}</h3>
+                            <md-button class="md-fab md-mini micro transparent" ng-click="deleteImage(image._id)">
+                                <md-icon md-font-library="material-icons">close</md-icon>
+                            </md-button>
+                        </div>
+                    </md-grid-tile-footer>
+
             </md-grid-tile>
         </md-grid-list>
     </md-content>
