--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
     </div>
     <div ng-view></div>
 
-    <!--<script src="node_modules/jquery/dist/jquery.js"></script>-->
-    <script src="js/jquery-latest.min.js"></script>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/angular/angular.min.js"></script>
     <script src="node_modules/angular-material/angular-material.min.js"></script>
     <script src="node_modules/angular-animate/angular-animate.min.js"></script>
@@ -40,7 +39,7 @@
     <script src="node_modules/angular-route/angular-route.min.js"></script>
     <script src="node_modules/angular-messages/angular-messages.min.js"></script>
     <script src="node_modules/angular-loading-bar/build/loading-bar.min.js"></script>
-    <script src="js/threesixty.min.js"></script>
+    <script src="node_modules/threesixty-slider/dist/threesixty.min.js"></script>
 
     <script src="app.js"></script>
     <script src="pages/images-list/images-list-controller.js"></script>
