--- a/pages/images-list/images-list.html
+++ b/pages/images-list/images-list.html
@@ -1,20 +1,28 @@
 <div>
     <md-content layout-padding>
-        <md-grid-list md-cols="4" md-gutter="100px" md-row-height-gt-md="4:3" md-row-height="4:3">
+        <md-grid-list md-cols-xs="1"
+                      md-cols-sm="2"
+                      md-cols-md="4"
+                      md-cols-gt-md="4"
+                      md-gutter-xs="8px"
+                      md-gutter-sm="8px"
+                      md-gutter-md="2vw"
+                      md-gutter-gt-md="4vw"
+                      md-row-height-gt-md="4:3"
+                      md-row-height="4:3">
             <md-grid-tile ng-repeat="image in images">
                 <a href="#!/image/{{image._id}}"
                    style="min-width: 100%; max-width: 100%; width: 100%; min-height: 100%; max-height: 100%; height: 100%;">
                     <img class="list-item-thumbnail" src="{{image.thumbnail}}">
                 </a>
-                    <md-grid-tile-footer>
-                        <div layout="row" layout-padding layout-align="center center">
-                            <h3 flex>{{image.createdAt | date: "yyyy-MM-dd HH:mm:ss"}}</h3>
-                            <md-button class="md-fab md-mini micro transparent" ng-click="deleteImage(image._id)">
-                                <md-icon md-font-library="material-icons">close</md-icon>
-                            </md-button>
-                        </div>
-                    </md-grid-tile-footer>
-
+                <md-grid-tile-footer>
+                    <div layout="row" layout-padding layout-align="center center">
+                        <h3 flex>{{image.createdAt | date: "yyyy-MM-dd HH:mm:ss"}}</h3>
+                        <md-button class="md-fab md-mini micro transparent" ng-click="deleteImage(image._id)">
+                            <md-icon md-font-library="material-icons">close</md-icon>
+                        </md-button>
+                    </div>
+                </md-grid-tile-footer>
             </md-grid-tile>
         </md-grid-list>
     </md-content>
