Added 360 image download as JSON feature

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <script src="node_modules/angular-messages/angular-messages.min.js"></script>
     <script src="node_modules/angular-loading-bar/build/loading-bar.min.js"></script>
     <script src="node_modules/threesixty-slider/dist/threesixty.min.js"></script>
+    <script src="node_modules/angular-file-saver/dist/angular-file-saver.bundle.min.js"></script>
 
     <script src="app.js"></script>
     <script src="pages/images-list/images-list-controller.js"></script>
